# Optimus

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  README.md  alembic.ini  provider.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_tool_metadata.py  0003_add_research_findings.py
artifacts/playbooks/: 10.0.0.1_20260422_074900.yaml  blutooth spamming_20260422_084602.yaml  test-simple.yaml  web reconnaissance_20260422_074710.yaml  web reconnaissance_20260422_074737.yaml
config/: config.yaml
core/: __init__.py  agent.py  executor.py  output_parser.py  planner.py  prompt_analyzer.py  reflect.py  replanner.py  session.py  tool_retriever.py
db/: __init__.py  metadata_extractor.py  scanner.py
kb/: __init__.py  cli.py  compiler.py  menu.py  researcher.py
kb/ingesters/: __init__.py  api_ingesters.py  base_ingester.py  cisa_ingester.py  mitre_attck.py  nvd_ingester.py
tests/: __init__.py
web/: __init__.py
web/blueprints/: __init__.py
