[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimus"
version = "0.1.0"
description = "Unified pentesting automation platform combining KB Builder, TopAgent, and Agent-Nimi"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "anthropic>=0.7.0",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "attackcti>=0.3.5",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
kb = "kb.cli:main"

[tool.setuptools]
packages = ["kb", "core", "db", "web"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=kb --cov=core --cov=db --cov-report=term-missing"
